edit header, tambah gambar, ganti resolusi

--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@
         </div>
         <div class="heroRight">
             <picture class="heroImage">
-                <source media=" (max-width: 899px)" srcset="./img/1heroMobile.jpg">
-                <source media=" (min-width: 900px)" srcset="./img/1heroDesktop.jpg">
-                <img src="./img/1heroDesktop.jpg" alt="Image Besar" class="heroImage heroImage--1">
+                <!-- <source media=" (max-width: 899px)" srcset="./img/2heroMobile.jpg"> -->
+                <source media=" (min-width: 900px)" srcset="./img/desktopPdf2.png">
+                <img src="./img/desktopPdf2.png" alt="Image Besar" class="heroImage heroImage--1">
             </picture>
             <picture class=" heroImage">
-                <source media=" (max-width: 899px)" srcset="./img/2heroMobile.jpg">
-                <source media=" (min-width: 900px)" srcset="./img/2heroDesktop.jpg">
-                <img src="./img/2heroDesktop.jpg" alt="Image Besar" class="heroImage heroImage--2">
+                <!-- <source media=" (max-width: 899px)" srcset="./img/1heroMobile.jpg"> -->
+                <source media=" (min-width: 900px)" srcset="./img/desktopPlayer.png">
+                <img src="./img/desktopPlayer.png" alt="Image Besar" class="heroImage heroImage--2">
             </picture>
             <picture class=" heroImage">
-                <source media=" (max-width: 899px)" srcset="./img/3heroMobile.jpg">
-                <source media=" (min-width: 900px)" srcset="./img/3heroDesktop.jpg">
-                <img src="./img/3heroDesktop.jpg" alt="Image Besar" class="heroImage heroImage--3">
+                <source media=" (max-width: 899px)" srcset="./img/mobilePdf2.png">
+                <!-- <source media=" (min-width: 900px)" srcset="./img/3heroDesktop.jpg"> -->
+                <img src="./img/mobilePdf2.png" alt="Image Besar" class="heroImage heroImage--3">
             </picture>
             <picture class=" heroImage">
-                <source media=" (max-width: 899px)" srcset="./img/4heroMobile.jpg">
-                <source media=" (min-width: 900px)" srcset="./img/4heroDesktop.jpg">
-                <img src="./img/4heroDesktop.jpg" alt="Image Besar" class="heroImage heroImage--4">
+                <source media=" (max-width: 899px)" srcset="./img/mobilePlayer.png">
+                <!-- <source media=" (min-width: 900px)" srcset="./img/4heroDesktop.jpg"> -->
+                <img src="./img/mobilePlayer.png" alt="Image Besar" class="heroImage heroImage--4">
             </picture>
         </div>
     </section>
@@ -103,160 +103,140 @@
             </div> -->
             <div class="description">
                 <a href="#section-media" class="description__container description__container--1" data-episode="1">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded/3786450/3786450-1585459065411-ae928e443132e.jpg"
-                        alt="Profil 1">
+                    <img src="./img/1.jpg" alt="Profil 1">
                     <div>
                         <span class="description__episode">Episode 1</span>
                         <span class="description__title">Bonjour</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--2" data-episode="2">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1585721048514-06e8b8fd9de5.jpg"
-                        alt="Profil 2">
+                    <img src="./img/2.jpg" alt="Profil 2">
                     <div>
                         <span class="description__episode">Episode 2</span>
                         <span class="description__title">Prancis dan Negara Francophone</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--3" data-episode="3">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1586299065507-25400285c593c.jpg"
-                        alt="Profil 3">
+                    <img src="./img/3.jpg" alt="Profil 3">
                     <div>
                         <span class="description__episode">Episode 3</span>
                         <span class="description__title">Hobi</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--4" data-episode="4">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1586862778762-60fedae7bc0f3.jpg"
-                        alt="Profil 4">
+                    <img src="./img/4.jpg" alt="Profil 4">
                     <div>
                         <span class="description__episode">Episode 4</span>
                         <span class="description__title">Liburan</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--5" data-episode="5">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1587474177524-0031596c11d69.jpg"
-                        alt="Profil 5">
+                    <img src="./img/5.png" alt="Profil 5">
                     <div>
                         <span class="description__episode">Episode 5</span>
                         <span class="description__title">Waktu</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--6" data-episode="6">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1588080248717-49dbf1f6de81a.jpg"
-                        alt="Profil 6">
+                    <img src="./img/6.jpg" alt="Profil 6">
                     <div>
                         <span class="description__episode">Episode 6</span>
                         <span class="description__title">Traveling</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--7" data-episode="7">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1588664490841-57a76aeb048c3.jpg"
-                        alt="Profil 7">
+                    <img src="./img//7.jpg" alt="Profil 7">
                     <div>
                         <span class="description__episode">Episode 7</span>
                         <span class="description__title">Kuliner</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--8" data-episode="8">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1589260218830-5b54a0f7c3ea9.jpg"
-                        alt="Profil 8">
+                    <img src="./img/8.jpg" alt="Profil 8">
                     <div>
                         <span class="description__episode">Episode 8</span>
                         <span class="description__title">Shopping</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--9" data-episode="9">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1589885171598-88ba85568a2c8.jpg"
-                        alt="Profil 9">
+                    <img src="./img/9.jpg" alt="Profil 9">
                     <div>
                         <span class="description__episode">Episode 9</span>
                         <span class="description__title">Menanyakan Alamat</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--10" data-episode="10">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1590462042320-8476212e7d283.jpg"
-                        alt="Profil 10">
+                    <img src="./img/10.jpg" alt="Profil 10">
                     <div>
                         <span class="description__episode">Episode 10</span>
                         <span class="description__title">Virus Corona</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--11" data-episode="11">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1591089742469-3778d3e88d673.jpg"
-                        alt="Profil 11">
+                    <img src="./img/11.jpg" alt="Profil 11">
                     <div>
                         <span class="description__episode">Episode 11</span>
                         <span class="description__title">Nostalgia</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--12" data-episode="12">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded/3786450/3786450-1585459065411-ae928e443132e.jpg"
-                        alt="Profil 12">
+                    <img src="./img/1.jpg" alt="Profil 12">
                     <div>
                         <span class="description__episode">Episode 12</span>
                         <span class="description__title">Objek</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--13" data-episode="13">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1592282661915-c56b644e28ac5.jpg"
-                        alt="Profil 13">
+                    <img src="./img/13.png" alt="Profil 13">
                     <div>
                         <span class="description__episode">Episode 13</span>
                         <span class="description__title">Emergency</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--14" data-episode="14">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded/3786450/3786450-1585459065411-ae928e443132e.jpg"
-                        alt="Profil 14">
+                    <img src="./img/1.jpg" alt="Profil 14">
                     <div>
                         <span class="description__episode">Episode 14</span>
                         <span class="description__title">Test 1</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--15" data-episode="15">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1593484173066-82ba1835f019d.jpg"
-                        alt="Profil 15">
+                    <img src="./img/15.jpg" alt="Profil 15">
                     <div>
                         <span class="description__episode">Episode 15</span>
                         <span class="description__title">Resolusi</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--16" data-episode="16">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded/3786450/3786450-1585459065411-ae928e443132e.jpg"
-                        alt="Profil 16">
+                    <img src="./img/1.jpg" alt="Profil 16">
                     <div>
                         <span class="description__episode">Episode 16</span>
                         <span class="description__title">Pronom <i>en</i> dan <i>y</i></span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--17" data-episode="17">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1595368959055-b5512055f0705.jpg"
-                        alt="Profil 17">
+                    <img src="./img/17.jpg" alt="Profil 17">
                     <div>
                         <span class="description__episode">Episode 17</span>
                         <span class="description__title">Pemilu</span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--18" data-episode="18">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1596012938007-a78273e880903.jpg"
-                        alt="Profil 18">
+                    <img src="./img/18.png" alt="Profil 18">
                     <div>
                         <span class="description__episode">Episode 18</span>
                         <span class="description__title"><i>L’économie</i></span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--19" data-episode="19">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded/3786450/3786450-1585459065411-ae928e443132e.jpg"
-                        alt="Profil 19">
+                    <img src="/img/1.jpg" alt="Profil 19">
                     <div>
                         <span class="description__episode">Episode 19</span>
                         <span class="description__title"><i>Les Propositions Relatives</i></span>
                     </div>
                 </a>
                 <a href="#section-media" class="description__container description__container--20" data-episode="20">
-                    <img src="https://d3t3ozftmdmh3i.cloudfront.net/production/podcast_uploaded_episode/3786450/3786450-1597229615569-8e277dd90d1a2.jpg"
-                        alt="Profil 20">
+                    <img src="./img/20.jpg" alt="Profil 20">
                     <div>
                         <span class="description__episode">Episode 20</span>
                         <span class="description__title"><i>Beau Cadeau</i></span>
@@ -300,7 +280,7 @@
                 <span><span class="waveTitle">Stopped</span> - <span class="waveStatus">Play me 😃</span></span>
             </div>
             <div class="mediaRight__ebook">
-                <a id="ebookLink" href="#" target="_blank">
+                <a class="ebookLink" href="#mediaRight__ebook">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                         <path fill="currentColor"
                             d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59c-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49c69.18-34.82 169.23-44.32 218.7-46.92c16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05C15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66c49.49 2.6 149.59 12.11 218.77 46.95c10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z" />
